--- a/app/styles/components/customize/_text_editor.scss
+++ b/app/styles/components/customize/_text_editor.scss
@@ -1,6 +1,6 @@
 .customize-lessons-editor {
   width: 573px;
-  height: 136px;
+  min-height: 136px;
   border-radius: 3px;
   background-color: #ffffff;
   border: solid 1px #c0c0c0;
