--- a/app/styles/components/classroom_lessons/_teacher_navbar.scss
+++ b/app/styles/components/classroom_lessons/_teacher_navbar.scss
@@ -12,6 +12,7 @@
     align-items: center;
     span {
       font-weight: bold;
+      margin-right: 5px;
     }
   }
   .custom-editions-tag {
@@ -69,71 +70,71 @@
       padding: 5px 10px;
     }
   }
-}
-
-.help-dropdown, .flag-dropdown, .customize-dropdown {
-  position: absolute;
-  background-color: white;
-  width: 149px;
-  padding: 6px;
-  font-size: 14px;
-  border-radius: 2px;
-  box-shadow: 0 2px 3px 0 #e9e9e9;
-  top: 45px;
-  i {
-    color: white;
+  .help-dropdown, .flag-dropdown, .customize-dropdown {
     position: absolute;
-    top: -14px;
-    right: 8px;
+    background-color: white;
+    width: 149px;
+    padding: 6px;
+    font-size: 14px;
+    border-radius: 2px;
+    box-shadow: 0 2px 3px 0 #e9e9e9;
+    top: 45px;
+    i {
+      color: white;
+      position: absolute;
+      top: -14px;
+      right: 8px;
+    }
+    p {
+      padding: 4px 6px;
+    }
   }
-  p {
-    padding: 4px 6px;
-  }
-}
 
-.flag-dropdown {
-  width: 157px;
-  right: 162px;
-  color: #3b3b3b;
-  hr {
-    margin: 9px 0;
+  .flag-dropdown {
+    width: 157px;
+    right: 162px;
+    color: #3b3b3b;
+    hr {
+      margin: 9px 0;
+    }
+    .no-flagged-students {
+      color: #818181;
+      border-bottom: solid 1px #e9e9e9;
+      font-weight: 600;
+    }
+    .explanation {
+      font-size: 11px;
+      color: #858585;
+    }
   }
-  .no-flagged-students {
-    color: #818181;
-    border-bottom: solid 1px #e9e9e9;
+
+  .help-dropdown {
     font-weight: 600;
-  }
-  .explanation {
-    font-size: 11px;
-    color: #858585;
-  }
-}
-
-.help-dropdown {
-  font-weight: 600;
-  right: 6px;
-  a {
-    color: #027360;
-  }
-  p:hover {
-    background-color: #f5f5f5;
-  }
-}
-
-.customize-dropdown {
-  left: 64px;
-  a {
-    display: block;
-    color: #027360;
-    padding-left: 5px;
-    &:hover {
+    right: 6px;
+    a {
+      color: #027360;
+    }
+    p:hover {
       background-color: #f5f5f5;
     }
-    &:first-of-type {
-      margin-bottom: 3px;
+  }
+
+  .customize-dropdown {
+    left: 64px;
+    a {
+      display: block;
+      color: #027360;
+      padding-left: 5px;
+      &:hover {
+        background-color: #f5f5f5;
+      }
+      &:first-of-type {
+        margin-bottom: 3px;
+      }
     }
   }
 }
+
 
 .lessons-teacher-preview-bar {
   display: flex;
