--- a/app/styles/components/customize/_choose_edition.scss
+++ b/app/styles/components/customize/_choose_edition.scss
@@ -1,16 +1,35 @@
 .choose-edition {
   width: 900px;
-  margin: 90px auto;
+  margin: auto;
+  .lesson-info {
+    margin-top: 25px;
+    padding-bottom: 20px;
+    border-bottom: solid 1px #e9e9e9;
+    h2 {
+      font-size: 20px;
+      color: #3b3b3b;
+      span {
+        font-weight: bold;
+      }
+    }
+    p {
+      color: #969696;
+    }
+  }
   h1 {
     font-size: 30px;
     font-weight: bold;
     color: #000000;
     margin-bottom: 12px;
-    text-align: center;
+    margin-top: 30px;
+
   }
   .explanation, .header {
     color: #969696;
     margin-bottom: 5px;
+  }
+  .header {
+    font-size: 16px;
   }
   .explanation {
     font-size: 14px;
@@ -56,6 +75,21 @@
       font-weight: 600;
       color: #3b3b3b;
     }
+    .action {
+      display: flex;
+    }
+    .select-button {
+      width: 115px;
+      height: 40px;
+      border: none;
+      border-radius: 3px;
+      background-color: #00c2a2;
+      font-size: 16px;
+      font-weight: bold;
+      margin-left: 10px;
+      color: #ffffff;
+      cursor: pointer;
+    }
     .customize-dropdown {
       position: relative;
       .customize {
@@ -68,10 +102,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-size: 16px;
+        font-weight: 600;
         cursor: pointer;
         .fa-magic {
-          margin-right: 4px;
-          font-size: 13px;
+          margin-right: 5px;
+          font-size: 14px;
         }
         .fa-caret-down {
           margin-left: 30px;
