--- a/app/styles/components/customize/_customize_navbar.scss
+++ b/app/styles/components/customize/_customize_navbar.scss
@@ -1,44 +1,48 @@
-.customize-navbar {
-  padding: 0px 60px;
-  height: 50px;
+.customize-navbar-container {
   background-color: #348fdf;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  color: white;
-  .left {
+  .customize-navbar {
+    padding: 0px 10px;
+    max-width: 1200px;
+    margin: auto;
+    height: 50px;
     display: flex;
-    align-items: center;
-    span {
-      align-items: center;
+    justify-content: space-between;
+    color: white;
+    .left {
       display: flex;
-      margin-right: 20px;
-      &:first-of-type {
-        font-size: 16px;
+      align-items: center;
+      span {
+        align-items: center;
+        display: flex;
+        margin-right: 20px;
+        &:first-of-type {
+          font-size: 16px;
+        }
+      }
+      .vertical-line {
+        width: 3px;
+        height: 27px;
+        display: block;
+        border-left: solid 1px #ffffff;
+      }
+      a {
+        align-items: center;
+        display: flex;
+        color: white;
+      }
+      .help {
+        height: 11px;
+        margin-top: 0px;
+        margin-right: 5px;
       }
     }
-    .vertical-line {
-      width: 3px;
-      height: 27px;
-      display: block;
-      border-left: solid 1px #ffffff;
-    }
-    a {
-      align-items: center;
+    .right {
       display: flex;
-      color: white;
+      align-items: center;
     }
-    .help {
-      height: 11px;
-      margin-top: 0px;
-      margin-right: 5px;
+    @media (max-width: 850px ) {
+      padding: 0px 10px;
     }
-  }
-  .right {
-    display: flex;
-    align-items: center;
-  }
-  @media (max-width: 850px ) {
-    padding: 0px 10px;
   }
 }
