make quote button work

--- a/app/styles/components/customize/_customize_edition_header.scss
+++ b/app/styles/components/customize/_customize_edition_header.scss
@@ -11,6 +11,10 @@
     h1 {
       font-size: 18px;
       color: #3b3b3b;
+      span {
+        font-weight: bold;
+        margin-right: 5px;
+      }
     }
     p {
       font-size: 14px;
