--- a/app/styles/components/customize/_text_editor.scss
+++ b/app/styles/components/customize/_text_editor.scss
@@ -23,7 +23,8 @@
       text-decoration: underline;
     }
     span {
-      margin-left: 13px;
+      margin-left: 7px;
+      margin-right: 7px;
       font-size: 14px;
       color: #969696;
     }
