--- a/app/styles/components/classroom_lessons/_teacher_navbar.scss
+++ b/app/styles/components/classroom_lessons/_teacher_navbar.scss
@@ -10,13 +10,16 @@
     font-size: 20px;
     display: flex;
     align-items: center;
+    p {
+      padding-bottom: 3px;
+    }
     span {
       font-weight: bold;
       margin-right: 5px;
     }
   }
   .custom-editions-tag {
-    width: 133px;
+    width: 90px;
     height: 23px;
     border-radius: 11.5px;
     background-color: #348fdf;
@@ -27,6 +30,7 @@
     justify-content: center;
     align-items: center;
     color: #ffffff;
+    padding-bottom: 2px;
   }
   .present-student-count {
     font-size: 16px;
@@ -123,16 +127,13 @@
   }
 
   .customize-dropdown {
+    font-weight: 600;
     left: 64px;
     a {
       display: block;
       color: #027360;
-      padding-left: 5px;
       &:hover {
         background-color: #f5f5f5;
-      }
-      &:first-of-type {
-        margin-bottom: 3px;
       }
     }
   }
