--- a/app/styles/components/customize/_customize_edition_header.scss
+++ b/app/styles/components/customize/_customize_edition_header.scss
@@ -43,6 +43,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      cursor: pointer;
     }
     p {
       font-size: 14px;
