--- a/app/styles/components/_customize.scss
+++ b/app/styles/components/_customize.scss
@@ -33,7 +33,7 @@
 
 .back-button {
   color: #027360;
-  margin-top: 25px;
+  padding-top: 25px;
   display: flex;
   align-items: center;
   cursor: pointer;
