update image; move back button into customize edition header

--- a/app/styles/components/customize/_customize_edition.scss
+++ b/app/styles/components/customize/_customize_edition.scss
@@ -7,10 +7,8 @@
   max-width: 1300px;
   margin: auto;
   .back-button {
-    width: 100vw;
-    margin-left: calc(50% - 50vw);
-    padding-left: 60px;
-    background-color: #fafafa;
+    padding-top: 0px;
+    padding-bottom: 25px;
   }
   .slide-container {
     .slide-header {
