add new image for download lesson plan icon

--- a/app/assets/stylesheets/pages/manage-units.scss
+++ b/app/assets/stylesheets/pages/manage-units.scss
@@ -204,6 +204,9 @@
       .supporting-info {
         position: relative;
         color: #585858;
+        img {
+          height: 18px;
+        }
       }
 
       .customize-lesson {
