--- a/app/styles/components/customize/_choose_edition.scss
+++ b/app/styles/components/customize/_choose_edition.scss
@@ -141,6 +141,7 @@
           height: 28px;
           img {
             margin-right: 10px;
+            height: 18px;
           }
           &:hover {
             background-color: #f9f9f9;
