update lessons list css

--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -366,7 +366,7 @@
     }
     a {
       font-size: 14px;
-      color: #00c2a2;
+      color: #027360;
     }
   }
   .image-container {
@@ -379,7 +379,8 @@
     }
   }
   .q-button {
-      font-size: 14px;
+    font-weight: bold;
+    font-size: 14px;
   }
   span {
     padding-left: 12px;
