--- a/app/styles/components/customize/_customize_edition.scss
+++ b/app/styles/components/customize/_customize_edition.scss
@@ -125,6 +125,9 @@
           > div {
             background-color: #fafafa;
           }
+          blockquote {
+            background-color: #E9E9E9;
+          }
         }
       }
     }
