--- a/app/styles/components/customize/_customize_edition_header.scss
+++ b/app/styles/components/customize/_customize_edition_header.scss
@@ -44,6 +44,9 @@
       justify-content: space-between;
       align-items: center;
       cursor: pointer;
+      &.missing-name {
+        border: solid 1px #ff7370;
+      }
     }
     p {
       font-size: 14px;
