fix margin above lesson name on customize page

--- a/app/styles/components/customize/_customize_edition_header.scss
+++ b/app/styles/components/customize/_customize_edition_header.scss
@@ -23,7 +23,7 @@
     }
   }
   .edition-name-and-sample-question-section {
-    margin: 20px 0px;
+    margin-bottom: 20px;
     .edit {
       font-size: 14px;
       color: #969696;
