Lock password and email CMS form fields

--- a/app/assets/stylesheets/cms/cms.scss
+++ b/app/assets/stylesheets/cms/cms.scss
@@ -38,6 +38,10 @@
     height: 265px;
   }
 
+  input[readonly='readonly'] {
+    background: #ccc;
+  }
+
   .cms-checkbox-row {
     margin: -5px 0 5px;
 
