--- a/app/views/cms/users/_form.html.erb
+++ b/app/views/cms/users/_form.html.erb
@@ -1,3 +1,11 @@
+<script>
+  function unlockField(fieldName) {
+    document.getElementById(fieldName).removeAttribute('readonly');
+    document.getElementById(fieldName).focus();
+    // The first sibling is the empty text between the input field and edit link.
+    document.getElementById(fieldName).nextSibling.nextSibling.remove();
+  }
+</script>
 <div class='cms-form'>
   <%= form_for [:cms, @user] do |f| %>
     <div class='cms-form-row'>
@@ -6,7 +14,8 @@
     </div>
     <div class='cms-form-row'>
       <%= f.label :email %>
-      <%= f.text_field :email, autocomplete: 'off' %>
+      <%= f.text_field :email, autocomplete: 'off', readonly: true %>
+      <a href='#!' onclick="unlockField('user_email')">Edit</a>
     </div>
     <div class='cms-form-row'>
       <%= f.label :username %>
@@ -26,11 +35,13 @@
     </div>
     <div class='cms-form-row'>
       <%= f.label :password %>
-      <%= f.password_field :password, autocomplete: 'new-password' %>
+      <%= f.password_field :password, autocomplete: 'new-password', readonly: true %>
+      <a href='#!' onclick="unlockField('user_password')">Edit</a>
     </div>
     <div class='cms-form-row'>
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: 'new-password' %>
+      <%= f.password_field :password_confirmation, autocomplete: 'new-password', readonly: true %>
+      <a href='#!' onclick="unlockField('user_password_confirmation')">Edit</a>
     </div>
     <div class='cms-submit-row'>
       <%= f.submit 'Save', class: 'button-green' %>
