--- a/app/styles/components/customize/_customize_edition.scss
+++ b/app/styles/components/customize/_customize_edition.scss
@@ -64,6 +64,7 @@
           }
           .optional {
             font-style: italic;
+            color: black;
           }
           .spread-label {
             display: flex;
