add instructions for blanks to fill in blank prompt

--- a/app/styles/components/customize/_customize_edition.scss
+++ b/app/styles/components/customize/_customize_edition.scss
@@ -66,6 +66,10 @@
             font-style: italic;
             color: black;
           }
+          .blank-instructions {
+            color: #969696;
+            margin-left: 20px;
+          }
           .spread-label {
             display: flex;
             justify-content: space-between;
